# avant

./: .gitignore  .luarc.json  CLAUDE.md  CMakeLists.txt  Dockerfile  Makefile  README.md  avant-deployment.yaml  avant-pod.yaml  centos8.md  generate_proto_lua.js  install_third_party_example.md  protobuf.md
.claude/skills/cpp-coding-standards/: SKILL.md
.github/workflows/: docker-image-pullrequest.yml  docker-image.yml
client/: client.cpp  client_ssl.cpp  websocket.html  websocket_ssl.html
client/cpp/: CMakeLists.txt  client.cpp  client_nb_connect.cpp  client_ssl.cpp
client/go/avant/: .gitignore  build.sh  go.mod  main.go
client/go/avant/client/: client.go
client/javascript/: README.md  index.js  package-lock.json  package.json
client/websocket/: websocket_read_only.html  websocket_ssl_read_only.html
protocol/: Makefile  proto_cmd.proto  proto_err_code.proto  proto_example.proto  proto_ipc_stream.proto  proto_lua.proto  proto_message_head.proto  proto_tunnel.proto  proto_udp.proto
src/: main.cpp
src/app/: http_app.cpp  http_app.h  lua_plugin.cpp  lua_plugin.h  other_app.cpp  other_app.h  stream_app.cpp  stream_app.h  websocket_app.cpp  websocket_app.h
src/connection/: base_ctx.cpp  base_ctx.h  connection.cpp  connection.h  connection_mgr.cpp  connection_mgr.h  http_ctx.cpp  http_ctx.h  ipc_stream_ctx.cpp  ipc_stream_ctx.h  stream_ctx.cpp  stream_ctx.h  websocket_ctx.cpp  websocket_ctx.h
src/event/: even_poller.cpp  event_poller.cpp  event_poller.h
src/global/: tunnel_id.cpp  tunnel_id.h
src/hooks/: init.cpp  init.h  reload.cpp  reload.h  stop.cpp  stop.h  tick.cpp  tick.h
src/proto/: proto_util.cpp  proto_util.h
src/server/: server.cpp  server.h
src/socket/: client_socket.cpp  client_socket.h  server_socket.cpp  server_socket.h  socket.cpp  socket.h  socket_pair.cpp  socket_pair.h
src/system/: config_mgr.cpp  config_mgr.h  system.cpp  system.h
src/task/: task_type.cpp  task_type.h
src/utility/: base64.cpp  base64.h  comm_errno.h  mime_type.h  object_pool.h  sha1.h  singleton.h  time.cpp  time.h  url.cpp  url.h  vec_str_buffer.cpp  vec_str_buffer.h
src/worker/: worker.cpp  worker.h
src/workers/: other.cpp  other.h  worker.cpp  worker.h
test/: buffer.test.cpp  json.test.cpp  main.cpp  node_http_server.js  object_pool.test.cpp  timer.test.cpp  xml.test.cpp
